# low-latency-shadow-trading-system

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml
bitfinex-feeder/: Cargo.toml  README.md
bitfinex-feeder/src/: main.rs
common/: CMakeLists.txt
common/include/: candle.hpp  order.hpp  report.hpp  trade.hpp
common/include/common/: candle.hpp  order.hpp  portfolio.hpp  report.hpp  spsc_memory_struct.hpp  trade.hpp
include/: candle.hpp  engine.hpp  order.hpp  order_book.hpp  report.hpp
kdb/: CMakeLists.txt
kdb/include/: memory.hpp  network.hpp
kdb/q/: schema.q
kdb/src/: main.cpp
order-book/: CMakeLists.txt  README.md
order-book/benchmark/: micro_bench.cpp
order-book/include/: engine.hpp  order.hpp  order_book.hpp
order-book/src/: main.cpp
order-book/test/: engine_test.cpp  order-book-test.cpp
src/: main.cpp
strategy/: CMakeLists.txt
strategy/include/: Engine.hpp  dashboard.hpp  indicator.hpp  portfolio.hpp  ring_buffer.hpp  sma.hpp  time.hpp
strategy/src/: main.cpp  viewer.cpp
strategy/test/: test_engine.cpp
test/: benchmark.cpp  engine_test.cpp  order-book-test.cpp  test.cpp  test_.cpp
view/: main.py  pyproject.toml
